New in v1.3.1 (????/??/??)
---------------------------



New in v1.3.0 (2009/01/03)
---------------------------

New option: --use-compatible-timestamps, which causes rdiff-backup to use - as
the hour/minute/second separator instead of :. Enabled by default on systems
which require : to be escaped. (Oliver Mulatz)

Allow rdiff-backup to backup files which it cannot read, but can change
the permissions of. (Andrew Ferguson)

Take start and end times from same system so that the elapsed time printed in
the statistics is not affected by time zone. (Andrew Ferguson)

Properly fix escaping DOS devices and trailing periods and spaces; now supports
native Windows and Linxu/FAT32. (Andrew Ferguson)


New in v1.2.4 (2009/01/01)
---------------------------

Disable escaping trailing spaces and periods for now since it broke remote
restores. Thanks to Dominic for reporting the issue. (Andrew Ferguson)


New in v1.2.3 (2008/12/28)
---------------------------

The official Windows build now includes the librsync patch for files > 4GB.
This requires the Visual C++ 2008 redistributable, available from Microsoft.

The epoch is now a valid date. Closes Savannah bug #24814. (Andrew Ferguson)

Report that connection has dropped if filesystem operation returns ENOTCONN.
Closes Ubuntu bug #219920. (Andrew Ferguson)

Print a more helpful error message if we get an error while reading an old
current_mirror marker. This can happen because it has been locked or deleted
by a just-finished rdiff-backup process. Closes Ubuntu bugs #88140 and
#284506. (Andrew Ferguson)

Do not backup reparse points on native Windows. Thanks to John Covici for
reporting the issue. (Andrew Ferguson)

Support comments in rdiff-backup's ACL files and quote the quoting character
properly if user changed it. (Patch from Oliver Mulatz)

Print a more helpful error message if we cannot read the backup destination.
Closes Ubuntu bug #292586 (again). (Andrew Ferguson)
